src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void Animation_Delete(void* self);
extern "C" __declspec(dllexport) void* Animation_New_0(int loopCount, cv::Scalar bgColor);
extern "C" __declspec(dllexport) int Animation_loop_count_get(void* self);
extern "C" __declspec(dllexport) void Animation_loop_count_set(void* self, int val);
extern "C" __declspec(dllexport) cv::Scalar Animation_bgcolor_get(void* self);
extern "C" __declspec(dllexport) void Animation_bgcolor_set(void* self, cv::Scalar val);
extern "C" __declspec(dllexport) void* Animation_durations_get(void* self);
extern "C" __declspec(dllexport) void Animation_durations_set(void* self, void* val);
extern "C" __declspec(dllexport) void* Animation_frames_get(void* self);
extern "C" __declspec(dllexport) void Animation_frames_set(void* self, void* val);
extern "C" __declspec(dllexport) void* Animation_still_image_get(void* self);
extern "C" __declspec(dllexport) void Animation_still_image_set(void* self, void* val);
extern "C" __declspec(dllexport) void* cv_imread_0(const char* filename, int flags);
extern "C" __declspec(dllexport) void cv_imread_1(const char* filename, void* dst, int flags);
extern "C" __declspec(dllexport) void* cv_imreadWithMetadata_0(const char* filename, void* metadataTypes, void* metadata, int flags);
extern "C" __declspec(dllexport) bool cv_imreadmulti_0(const char* filename, void* mats, int flags);
extern "C" __declspec(dllexport) bool cv_imreadmulti_1(const char* filename, void* mats, int start, int count, int flags);
extern "C" __declspec(dllexport) bool cv_imreadanimation_0(const char* filename, void* animation, int start, int count);
extern "C" __declspec(dllexport) bool cv_imdecodeanimation_0(void* buf, void* animation, int start, int count);
extern "C" __declspec(dllexport) bool cv_imwriteanimation_0(const char* filename, void* animation, void* params);
extern "C" __declspec(dllexport) bool cv_imencodeanimation_0(const char* ext, void* animation, void* buf, void* params);
extern "C" __declspec(dllexport) size_t cv_imcount_0(const char* filename, int flags);
extern "C" __declspec(dllexport) bool cv_imwrite_0(const char* filename, void* img, void* params);
extern "C" __declspec(dllexport) bool cv_imwriteWithMetadata_0(const char* filename, void* img, void* metadataTypes, void* metadata, void* params);
extern "C" __declspec(dllexport) bool cv_imwritemulti_0(const char* filename, void* img, void* params);
extern "C" __declspec(dllexport) void* cv_imdecode_0(void* buf, int flags);
extern "C" __declspec(dllexport) void* cv_imdecodeWithMetadata_0(void* buf, void* metadataTypes, void* metadata, int flags);
extern "C" __declspec(dllexport) bool cv_imdecodemulti_0(void* buf, int flags, void* mats, cv::Range range);
extern "C" __declspec(dllexport) bool cv_imencode_0(const char* ext, void* img, void* buf, void* params);
extern "C" __declspec(dllexport) bool cv_imencodeWithMetadata_0(const char* ext, void* img, void* metadataTypes, void* metadata, void* buf, void* params);
extern "C" __declspec(dllexport) bool cv_imencodemulti_0(const char* ext, void* imgs, void* buf, void* params);
extern "C" __declspec(dllexport) bool cv_haveImageReader_0(const char* filename);
extern "C" __declspec(dllexport) bool cv_haveImageWriter_0(const char* filename);